- 유저 남은 수 카운팅 추가  - 게임 상태값(Emumeration)추가  - 게임 시작 UI추가

--- a/BattleRoyale/Config/DefaultEngine.ini
+++ b/BattleRoyale/Config/DefaultEngine.ini
@@ -8,7 +8,7 @@ TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/GameModes/Battle/BP_BattleGM.BP_BattleGM_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/ThirdPersonBP/Blueprints/BP_GameInstance.BP_GameInstance_C
 
