- 타이틀, 로비 추가  - 비행기 추가  - 비행기 다이빙, 글라이딩 애니메이션 추가

--- a/BattleRoyale/Config/DefaultEngine.ini
+++ b/BattleRoyale/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=BattleRoyale
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/GameModes/Title/Title.Title
+GameDefaultMap=/Game/Maps/Jungle/Jungle.Jungle
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
