- 빌드타겟 코드 추가

--- a/BattleRoyale/Config/DefaultEngine.ini
+++ b/BattleRoyale/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=BattleRoyale
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/GameModes/Title/Title.Title
-GameDefaultMap=/Game/Maps/Jungle/Jungle.Jungle
+GameDefaultMap=/Game/GameModes/Title/Title.Title
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -11,6 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/GameModes/Battle/BP_BattleGM.BP_BattleGM_C
 GlobalDefaultServerGameMode=None
 GameInstanceClass=/Game/ThirdPersonBP/Blueprints/BP_GameInstance.BP_GameInstance_C
+ServerDefaultMap=/Game/Maps/Jungle/Jungle.Jungle
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_10
